# ocs2

ocs2_compiler_options/: CMakeLists.txt  ocs2_utils-extra.cmake  package.xml
ocs2_compiler_options/cmake/: ocs2_package.cmake
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_ddp/include/ocs2_ddp/: ContinuousTimeLqr.hpp  DDP_Data.hpp  DDP_DataCollector.hpp  DDP_HelperFunctions.hpp  DDP_Settings.hpp  GaussNewtonDDP.hpp  GaussNewtonDDP_MPC.hpp  HessianCorrection.hpp  ILQR.hpp  SLQ.hpp
ocs2_ddp/src/: ContinuousTimeLqr.cpp  DDP_DataCollector.cpp  DDP_HelperFunctions.cpp  DDP_Settings.cpp  GaussNewtonDDP.cpp  HessianCorrection.cpp  ILQR.cpp  SLQ.cpp
ocs2_ddp/src/riccati_equations/: ContinuousTimeRiccatiEquations.cpp  DiscreteTimeRiccatiEquations.cpp  RiccatiModification.cpp
ocs2_ddp/src/search_strategy/: LevenbergMarquardtStrategy.cpp  LineSearchStrategy.cpp  StrategySettings.cpp
ocs2_ddp/src/unsupported/: MPC_OCS2.cpp
ocs2_ddp/test/: CMakeLists.txt  CircularKinematicsTest.cpp  CorrectnessTest.cpp  Exp0Test.cpp  Exp1Test.cpp  HybridSlqTest.cpp  RiccatiTest.cpp  testContinuousTimeLqr.cpp  testDdpHelperFunction.cpp  testReachingTask.cpp
ocs2_ddp/test/bouncingmass/: BouncingMassTest.cpp  OverallReference.cpp  Reference.cpp
ocs2_frank_wolfe/: CMakeLists.txt  package.xml
ocs2_frank_wolfe/include/ocs2_frank_wolfe/: FrankWolfeDescentDirection.hpp  GradientDescent.hpp  NLP_Constraints.hpp  NLP_Cost.hpp  NLP_Settings.hpp
ocs2_frank_wolfe/src/: FrankWolfeDescentDirection.cpp  GradientDescent.cpp
ocs2_frank_wolfe/test/: CMakeLists.txt  MatyasTest.cpp  QuadraticTest.cpp  testGLPK.cpp
ocs2_ipm/: CMakeLists.txt  package.xml
ocs2_ipm/include/ocs2_ipm/: IpmHelpers.hpp  IpmInitialization.hpp  IpmMpc.hpp  IpmPerformanceIndexComputation.hpp  IpmSettings.hpp  IpmSolver.hpp  IpmSolverStatus.hpp
ocs2_ipm/src/: IpmHelpers.cpp  IpmInitialization.cpp  IpmPerformanceIndexComputation.cpp  IpmSettings.cpp  IpmSolver.cpp
ocs2_ipm/test/: CMakeLists.txt  Exp0Test.cpp  Exp1Test.cpp  testCircularKinematics.cpp  testSwitchedProblem.cpp  testUnconstrained.cpp  testValuefunction.cpp
ocs2_mpc/: CMakeLists.txt  package.xml
ocs2_mpc/include/ocs2_mpc/: CommandData.hpp  LoopshapingSystemObservation.hpp  MPC_BASE.hpp  MPC_MRT_Interface.hpp  MPC_Settings.hpp  MRT_BASE.hpp  MrtObserver.hpp  SystemObservation.hpp  mpc_base.hpp  mrt_base.hpp
ocs2_mpc/src/: LoopshapingSystemObservation.cpp  MPC_BASE.cpp  MPC_MRT_Interface.cpp  MPC_Settings.cpp  MRT_BASE.cpp  SystemObservation.cpp  mpc_base.cpp  mrt_base.cpp
ocs2_mpcnet/ocs2_legged_robot_mpcnet/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_legged_robot_mpcnet/src/: LeggedRobotMpcnetDefinition.cpp  LeggedRobotMpcnetInterface.cpp
ocs2_mpcnet/ocs2_mpcnet/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_mpcnet_core/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_mpcnet_core/src/: MpcnetInterfaceBase.cpp
ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_msgs/msg/: ModeSchedule.msg  MpcFlattenedController.msg
ocs2_oc/: CMakeLists.txt  package.xml
ocs2_oc/src/approximate_model/: ChangeOfInputVariables.cpp  LinearQuadraticApproximator.cpp
ocs2_oc/src/multiple_shooting/: Helpers.cpp  Initialization.cpp  LagrangianEvaluation.cpp  MetricsComputation.cpp  PerformanceIndexComputation.cpp  ProjectionMultiplierCoefficients.cpp  Transcription.cpp
ocs2_oc/src/oc_data/: LoopshapingPrimalSolution.cpp  PerformanceIndex.cpp  TimeDiscretization.cpp
ocs2_oc/src/oc_problem/: LoopshapingOptimalControlProblem.cpp  OcpSize.cpp  OcpToKkt.cpp  OptimalControlProblem.cpp  OptimalControlProblemHelperFunction.cpp
ocs2_oc/src/oc_solver/: SolverBase.cpp
ocs2_oc/src/precondition/: Ruzi.cpp
ocs2_oc/src/rollout/: InitializerRollout.cpp  PerformanceIndicesRollout.cpp  RolloutBase.cpp  RolloutSettings.cpp  RootFinder.cpp  StateTriggeredRollout.cpp  TimeTriggeredRollout.cpp
ocs2_oc/src/search_strategy/: FilterLinesearch.cpp
ocs2_oc/src/synchronized_module/: LoopshapingReferenceManager.cpp  LoopshapingSynchronizedModule.cpp  ReferenceManager.cpp  SolverObserver.cpp
ocs2_oc/src/trajectory_adjustment/: TrajectorySpreading.cpp
ocs2_oc/test/: CMakeLists.txt  testChangeOfInputVariables.cpp
ocs2_oc/test/multiple_shooting/: testProjectionMultiplierCoefficients.cpp  testTranscriptionMetrics.cpp  testTranscriptionPerformanceIndex.cpp
ocs2_oc/test/oc_data/: testTimeDiscretization.cpp
ocs2_oc/test/oc_problem/: testOcpToKkt.cpp
ocs2_oc/test/precondition/: testPrecondition.cpp
ocs2_oc/test/rollout/: testStateTriggeredRollout.cpp  testTimeTriggeredRollout.cpp
ocs2_oc/test/trajectory_adjustment/: TrajectorySpreadingTest.cpp
ocs2_perceptive/: CMakeLists.txt  package.xml
ocs2_perceptive/src/: lintTarget.cpp
ocs2_perceptive/src/end_effector/: EndEffectorDistanceConstraint.cpp  EndEffectorDistanceConstraintCppAd.cpp
ocs2_perceptive/test/: CMakeLists.txt
ocs2_perceptive/test/interpolation/: testBilinearInterpolation.cpp  testTrilinearInterpolation.cpp
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_pinocchio/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_mobile_manipulator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_robotic_examples/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/test/: test_multiplot_remap.cpp  test_node.cpp
ocs2_slp/: CMakeLists.txt  package.xml
ocs2_slp/src/: Helpers.cpp  SlpSettings.cpp  SlpSolver.cpp
ocs2_slp/test/: CMakeLists.txt  testHelpers.cpp  testPipgSolver.cpp  testSlpSolver.cpp
ocs2_sqp/hpipm_wrapper/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  package.xml
(+711 files in other folders)
