<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_ipm</name>
  <version>0.0.0</version>
  <description>The ocs2_ipm package</description>

  <maintainer email="sotaro.katayama@gmail.com">Sotaro Katayama</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>ocs2_compiler_options</build_depend>

  <depend>blasfeo_vendor</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>hpipm_wrapper</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_oc</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ocs2_qp_solver</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
