<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_legged_robot_mpcnet</name>
  <version>0.0.0</version>
  <description>The ocs2_legged_robot_mpcnet package</description>

  <author email="areske@ethz.ch">Alexander Reske</author>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="areske@ethz.ch">Alexander Reske</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>

  <depend>ocs2_legged_robot</depend>
  <depend>ocs2_legged_robot_raisim</depend>
  <depend>ocs2_legged_robot_ros</depend>
  <depend>ocs2_mpcnet_core</depend>

</package>
