<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_mpcnet</name>
  <version>0.0.0</version>
  <description>The ocs2_mpcnet metapackage</description>

  <author email="areske@ethz.ch">Alexander Reske</author>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="areske@ethz.ch">Alexander Reske</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ocs2_mpcnet_core</exec_depend>
  <exec_depend>ocs2_ballbot_mpcnet</exec_depend>
  <exec_depend>ocs2_legged_robot_mpcnet</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
