<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_mpcnet_core</name>
  <version>0.0.0</version>
  <description>The ocs2_mpcnet_core package</description>

  <author email="areske@ethz.ch">Alexander Reske</author>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="areske@ethz.ch">Alexander Reske</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>cmake_clang_tools</build_depend>

  <depend>pybind11_catkin</depend>

  <depend>ocs2_mpc</depend>
  <depend>ocs2_python_interface</depend>
  <depend>ocs2_ros_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
