<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_pinocchio</name>
  <version>1.0.0</version>
  <description>Metapackage for OCS2 tools using the pinocchio rigid body dynamics library</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ocs2_centroidal_model</exec_depend>
  <exec_depend>ocs2_pinocchio_interface</exec_depend>
  <exec_depend>ocs2_self_collision</exec_depend>
  <exec_depend>ocs2_self_collision_visualization</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
