<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_self_collision_visualization</name>
  <version>0.0.0</version>
  <description>The ocs2_self_collision_visualization package</description>

  <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <build_depend>ocs2_compiler_options</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_self_collision</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
