<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_raisim</name>
  <version>0.0.1</version>
  <description>The ocs2_raisim metapackage</description>

  <author email="areske@ethz.ch">Alexander Reske</author>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="areske@ethz.ch">Alexander Reske</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ocs2_raisim_core</exec_depend>
  <exec_depend>ocs2_raisim_ros</exec_depend>
  <exec_depend>ocs2_legged_robot_raisim</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
