<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_raisim_ros</name>
  <version>0.0.1</version>
  <description>This package provides ROS functionality to the ocs2_raisim_core package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>BSD</license>

  <author email="jcarius@ethz.ch">Jan Carius</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ocs2_raisim_core</depend>
  <depend>grid_map_msgs</depend>

  <exec_depend>grid_map_rviz_plugin</exec_depend>

</package>
