<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_mobile_manipulator</name>
  <version>0.0.0</version>
  <description>The ocs2_mobile_manipulator package</description>

  <maintainer email="mspieler@ethz.ch">Michael Spieler</maintainer>
  <maintainer email="fperry@ethz.ch">Perry Franklin</maintainer>
  <maintainer email="mittalma@ethz.ch">Mayank Mittal</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_self_collision</depend>
  <depend>pinocchio</depend>

</package>