<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2_robotic_examples</name>
  <version>0.0.0</version>
  <description>The ocs2_robotic_examples metapackage</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ocs2_ballbot</exec_depend>
  <exec_depend>ocs2_ballbot_ros</exec_depend>
  <exec_depend>ocs2_cartpole</exec_depend>
  <exec_depend>ocs2_cartpole_ros</exec_depend>
  <exec_depend>ocs2_double_integrator</exec_depend>
  <exec_depend>ocs2_double_integrator_ros</exec_depend>
  <exec_depend>ocs2_quadrotor</exec_depend>
  <exec_depend>ocs2_quadrotor_ros</exec_depend>
  <exec_depend>ocs2_mobile_manipulator</exec_depend>
  <exec_depend>ocs2_mobile_manipulator_ros</exec_depend>
  <exec_depend>ocs2_anymal</exec_depend>
  <exec_depend>ocs2_legged_robot</exec_depend>
  <exec_depend>ocs2_legged_robot_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <metapackage />
  </export>

</package>